[package]
name = "simple-proxy"
version = "0.1.0"
authors = ["Your Name <zjiel4cisco@gmail.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/bj-edward/simple-proxy"
homepage = "https://github.com/bj-edward/simple-proxy"
description = """
A simple proxy server in Rust.
"""
readme = "README.md"
categories = ["development-tools"]
keywords = []

[dependencies]
anyhow = "1.0.98"
pingora = { version = "0.4.0", features = ["lb", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
argon2 = { version = "0.5.3" }
axum = "0.8.4"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
rand = "0.8.5"
serde_json = "1.0.140"

[patch.crates-io]
sfv = { git = "https://github.com/undef1nd/sfv.git", tag = "v0.9.4" }
